fix: td header strip and datapack registry order (p.2.2 chain)
Td.headerStripped removed every line starting with "type " — including
legitimate data keys like type = "minecraft:crafting_shaped" (recipes,
loot tables, structures). Now only the real "type tie<...>" header is
stripped, matching tie-main parse_data contract.
Datapack.entries() used Map.copyOf which drops iteration order — now
returns an order-preserving unmodifiable LinkedHashMap over the sorted
TreeMap so registry ids iterate deterministically.